--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.9.0
   shared_preferences: ^2.5.3
   flutter_secure_storage: ^9.2.4
+  reactive_forms: ^17.0.1
 
 dev_dependencies:
   flutter_test:
