--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   custom_lint: ^0.8.1
-  riverpod_lint: ^3.0.3
+  riverpod_lint: 3.0.3
   flutter_launcher_icons: ^0.14.4
   build_runner: ^2.4.15
   riverpod_generator: ^3.0.3
