--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_secure_storage: ^9.2.4
   reactive_forms: ^17.0.1
+  go_router: ^17.1.0
 
   intl: any
 dev_dependencies:
