Refactor flashcard and folder features for improved code quality and UI enhancements
- Update flashcard form schema to use StringUtils for normalization.
- Enhance FlashcardCardSectionHeader widget with subtitle and improved styling.
- Convert FlashcardContentCard to StatefulWidget for audio playing state management.
- Refactor FlashcardSetMetadataSection to simplify metadata display.
- Modify FlashcardUiState to track currently playing flashcard.
- Remove unused folder creation buttons in FolderScreen.
- Update folder form schema to utilize StringUtils for normalization.
- Simplify FolderListCard by removing open action from the popup menu.
- Add a script to enforce StringUtils usage contract across the codebase.
- Update localization files to include new metadata labels.

--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Enforce UI Constants Centralization
         run: dart run tool/verify_ui_constants_centralization.dart
 
+      - name: Enforce StringUtils Contract
+        run: dart run tool/verify_string_utils_contract.dart
+
       - name: Enforce UI Design Guard
         run: dart run tool/verify_ui_design_guard.dart
 
