feat(profile): add persistent user settings across BE and FE
- add backend user settings model and migration (theme_mode, study_auto_play_audio, study_cards_per_session)

- extend auth profile APIs with settings contract and update endpoint

- update auth service/controller/validation constants and messages for settings

- implement profile settings domain in Flutter with Riverpod repository/viewmodel flow

- add runtime app theme mode controller and persist preference in prefs storage

- enhance profile UI with user settings controls and save actions

- update profile routing/bottom navigation and localization strings

- align AGENTS root/global instructions to avoid missing checklist steps

--- a/learn-wire-api-service/src/main/resources/application.yml
+++ b/learn-wire-api-service/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        default_schema: learnwise
+        '[default_schema]': learnwise
         jdbc:
-          time_zone: UTC
+          '[time_zone]': UTC
   flyway:
     enabled: true
     locations: classpath:db/migration
@@ -30,7 +30,7 @@ spring:
     default-schema: learnwise
     validate-on-migrate: true
     placeholders:
-      seed_demo_data: ${APP_DB_SEED_DEMO_DATA:false}
+      '[seed_demo_data]': ${APP_DB_SEED_DEMO_DATA:false}
   messages:
     basename: messages
 
