--- a/learn-wire-api-service/src/main/resources/application.yml
+++ b/learn-wire-api-service/src/main/resources/application.yml
@@ -33,12 +33,13 @@ spring:
       '[seed_demo_data]': ${APP_DB_SEED_DEMO_DATA:false}
   messages:
     basename: messages
+  web:
+    error:
+      include-message: never
+      include-binding-errors: never
 
 server:
   address: 0.0.0.0
-  error:
-    include-message: never
-    include-binding-errors: never
 
 springdoc:
   api-docs:
