feat(audio): implement global and per-deck TTS and audio settings
This commit introduces a comprehensive Text-to-Speech (TTS) and audio settings feature, allowing users to configure voice preferences globally at the profile level and override them on a per-deck basis.

- **Backend (Java/Spring):**
    - Extended `user_settings` with TTS parameters (voice ID, speech rate, pitch, volume) and added corresponding database migration (`V19`).
    - Added override settings for audio and TTS to the `decks` table, along with a migration (`V20`) and constraints.
    - Implemented a `DeckAudioSettingsController` with endpoints to get and update per-deck audio settings.
    - Enhanced `AuthServiceImpl` and `DeckServiceImpl` to handle the new global and override settings, ensuring the effective settings are correctly resolved.
    - Updated DTOs (`AuthMeResponse`, `AuthUpdateSettingsRequest`, `DeckAudioSettingsResponse`, etc.) to support the new settings contracts.

- **Frontend (Flutter):**
    - Implemented a `ProfileTtsVoiceSettingsSection` widget for managing global TTS voice, speed, pitch, and volume.
    - Integrated the new TTS settings into the profile screen, allowing users to select a voice, adjust parameters, and save their preferences.
    - Added `DeckAudioSettings` models and extended the `DeckRepository` to fetch and update per-deck audio override settings.
    - Created a `deckAudioSettings` Riverpod provider to compute the `effectiveStudySettingsForDeck` by merging global and per-deck settings.
    - Enabled auto-play functionality in both flip-card and session-based study modes, using the effective TTS settings for the current deck.
    - Passed the `deckId` through study-related navigation and view models to correctly resolve audio settings.

- **Tooling and Quality Gates:**
    - Introduced several new CI quality guards to improve code quality and test coverage:
        - `verify_coverage_budget.dart`: Enforces line coverage thresholds defined in `coverage_gu

--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Generate code
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
+      - name: Enforce CI Guard Parity
+        run: dart run tool/verify_ci_guard_parity.dart
+
       - name: Enforce Riverpod Annotation DI
         run: dart run tool/verify_riverpod_annotation.dart
 
@@ -43,12 +46,25 @@ jobs:
       - name: Enforce StringUtils Contract
         run: dart run tool/verify_string_utils_contract.dart
 
+      - name: Enforce Theme Contract
+        run: dart run tool/verify_theme_contract.dart
+
+      - name: Enforce Accessibility Contract
+        run: dart run tool/verify_accessibility_contract.dart
+
       - name: Enforce UI Design Guard
         run: dart run tool/verify_ui_design_guard.dart
 
+      - name: Enforce UI State Scalability Contract
+        run: dart run tool/verify_ui_state_scalability_contract.dart
+
+      - name: Enforce Public API Test Contract
+        run: dart run tool/verify_public_api_test_contract.dart
+
+      - name: Enforce Test Pyramid Contract
+        run: dart run tool/verify_test_pyramid_contract.dart
+
       - name: Enforce Code Quality Contract
-        env:
-          STRICT_QUALITY_CONTRACT: '1'
         run: dart run tool/verify_code_quality_contract.dart
 
       - name: Run custom_lint gate
@@ -57,5 +73,8 @@ jobs:
       - name: Analyze
         run: flutter analyze
 
-      - name: Test
-        run: flutter test
+      - name: Test With Coverage
+        run: flutter test --coverage
+
+      - name: Enforce Coverage Budget
+        run: dart run tool/verify_coverage_budget.dart
