--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,6 +70,11 @@ dev_dependencies:
   freezed: ^3.0.6
   json_serializable: ^6.9.0
   yaml: ^3.1.2
+  coverage: ^1.15.0
+  fake_async: ^1.3.3
+  mockito: ^5.6.3
+  learnwise_custom_lints:
+    path: tools/learnwise_custom_lints
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
