feat(dev): add common widget usage contract verification
- Add a Dart script (`verify_common_widget_usage_contract.dart`) to enforce the use of custom common widgets over standard Flutter widgets like `TextField`, `FilledButton`, `OutlinedButton`, etc.
- Introduce a baseline file (`common_widget_usage_baseline.txt`) to track and allow existing violations, preventing new ones.
- Integrate the verification script into the `flutter_ci.yml` workflow to run on CI.
- Refactor the TTS service to simplify voice deduplication logic.

--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Enforce Common Widget Boundaries
         run: dart run tool/verify_common_widget_boundaries.dart
 
+      - name: Enforce Common Widget Usage Contract
+        run: dart run tool/verify_common_widget_usage_contract.dart
+
       - name: Enforce UI Constants Centralization
         run: dart run tool/verify_ui_constants_centralization.dart
 
