--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_riverpod: 3.0.3
+  flutter_hooks: ^0.21.3+1
+  hooks_riverpod: 3.0.3
   riverpod_annotation: 3.0.3
   freezed_annotation: ^3.0.0
   flutter_tts: ^4.2.5
