feat(decks): implement deck listing screen with search, sort, and pagination
- Implemented the `DeckScreen` as a `HookConsumerWidget` to display a paginated list of decks for a given folder.
- Added a `DeckScreenToolbar` with a debounced search field and sort menu for filtering and ordering the deck list.
- Implemented infinite scrolling to load more decks as the user scrolls to the bottom of the list.
- Created `DeckListCard` to display individual deck information and provide actions for opening, editing, and deleting decks.
- Added support for creating, updating, and deleting decks via `DeckEditorDialog` and `LwConfirmDialog`.
- Introduced `DeckController` and `DeckQueryController` using Riverpod to manage state, data fetching, and query parameters.
- Defined deck-related models (`DeckItem`, `DeckListQuery`, `DeckListingState`, etc.) and added corresponding unit tests.
- Refactored several `StatefulWidget` and `ConsumerStatefulWidget` screens to `HookConsumerWidget` to align with the new architecture, including `LoginScreen`, `RegisterScreen`, `FlashcardManagementScreen`, `FlashcardFlipStudyScreen`, and various study mode views.
- Added a `verify_riverpod_hook_checklist.dart` tool and CI step to enforce `HookConsumerWidget` usage and prevent direct repository/service access from the view layer.
- Added the `/decks/:folderId` route to the application's router.

--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Enforce Riverpod Annotation DI
         run: dart run tool/verify_riverpod_annotation.dart
 
+      - name: Enforce Riverpod Hook Checklist
+        run: dart run tool/verify_riverpod_hook_checklist.dart
+
       - name: Enforce State Management Contract
         run: dart run tool/verify_state_management_contract.dart
 
